added route to the root

--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -12,21 +12,21 @@
           <div class="event">
             <div class="content">
               <div class="summary">
-                <a>Elliot Fu</a> added <a>Jenny Hess</a> as a friend
+                <em>Elliot Fu</em>: Hi
               </div>
             </div>
           </div>
           <div class="event">
             <div class="content">
               <div class="summary">
-                <a>Stevie Feliciano</a> added <a>Elliot Fu</a> as a friend
+                <em>Stevie Feliciano</em>: Good morning!
               </div>
             </div>
           </div>
           <div class="event">
             <div class="content">
               <div class="summary">
-                <a>Helen Troy</a> added <a>Christian Rocha</a> as a friend
+                <em>Helen Troy</em>: Hello everyone
               </div>
             </div>
           </div>
