--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,7 +1,5 @@
 <div class="ui small inverted menu">
-  <a class="item">
-    Chatroom
-  </a>
+  <%=link_to "ChatRoom", root_path, class: "item" %>
   <a class="item">
     Messages
   </a>
@@ -9,9 +7,10 @@
     <div class="ui dropdown item">
       Account <i class="dropdown icon"></i>
       <div class="menu">
+        <%= link_to "Log In", login_path, class: "item" %>
         <a class="item">Logout</a>
-        <a class="item">Login</a>
-        <a class="item">Signup</a>
+        <a class="item">SignIn</a>
+
       </div>
     </div>
     <div class="item">
